--- a/index.mdx
+++ b/index.mdx
@@ -11,20 +11,23 @@ description: "Документация по интеграции Finmar API"
 
 Приём платежей банковскими картами и альтернативными методами оплаты.
 
-<CardGroup cols={2}>
+<CardGroup cols={1}>
   <Card title="Банковские карты" icon="credit-card" horizontal href="/products/card">
-    Приём оплаты банковскими картами через Hosted Payment Page (HPP) или Host-to-Host (H2H)
+    Приём оплаты банковскими картами. HPP или H2Р
   </Card>
   <Card title="Openbanking" icon="money-bill-transfer" horizontal href="/products/openbanking">
     Прямые переводы со счёта пользователя через Open Banking
   </Card>
   <Card title="Widget Integration" icon="dumpster-fire" horizontal href="/products/widget">
-    Платежное решение для приема платежей с криптозеркалированием
+    Платежное решение для приема платежей с криптозеркалированием и низкими ставками
   </Card>
   <Card title="Apple Pay" icon="cc-apple-pay" horizontal href="/products/applepay">
     Приём оплаты через Apple Pay для устройств Apple
   </Card>
   <Card title="Google Pay" icon="google-pay" horizontal href="/products/googlepay">
     Приём оплаты через Google Pay для Android и веб-приложений
+  </Card>
+  <Card title="Криптогейт" icon="link" horizontal href="/products/cryptogate/deposit">
+    Приём оплаты криптовалютой
   </Card>
 </CardGroup>
