--- a/products/cryptogate/pay-out.mdx
+++ b/products/cryptogate/pay-out.mdx
@@ -8,7 +8,7 @@ description: "Выплаты в криптовалютах"
 
 <Steps>
   <Step title="Создание операции на выплату">
-    Проект отправляет запрос в Finmar API для создания операции на выплату криптовалюты пользователю.
+    Проект запрашивает список доступных сетей и криптоактивов для выплат методом `GET /gate/withdraw/currencies/{payment_profile}`, а затем отправляет запрос на создание операции выплаты методом `POST /gate/pay-out`.
   </Step>
   <Step title="Получение адреса для выплаты">
     Пользователь предоставляет адрес криптокошелька для получения выплаты.
@@ -24,11 +24,80 @@ description: "Выплаты в криптовалютах"
   </Step>
 </Steps>
 
-<Warning>
-  Детальная документация по выплатам находится в разработке. Для получения актуальной информации обратитесь к менеджеру по интеграции.
-</Warning>
+## API‑методы
 
-<CardGroup cols={1}>
-  <Card title="Документация по интеграции" icon="book" horizontal href="/api-reference/introduction">
-  </Card>  
-</CardGroup>
+### Получить доступные валюты для выплат
+
+Метод `GET /gate/withdraw/currencies/{payment_profile}` возвращает список сетей и криптоактивов с доступным балансом для выплат.
+
+<RequestExample>
+```bash gate/withdraw/currencies
+curl --request GET \
+  --url 'https://sandbox.finmar.tech/gate/withdraw/currencies/sandbox?project_id=preview' \
+  --header 'Authorization: Basic BASE64_LOGIN_PASSWORD'
+```
+</RequestExample>
+
+<ResponseExample>
+```json Success
+{
+  "success": true,
+  "trace_id": "99395c4231744dbd934a6342ecca878a",
+  "result": [
+    {
+      "crypto_network": "TRX",
+      "crypto_assets": [
+        {
+          "asset_name": "TRX",
+          "balance": "100.0"
+        },
+        {
+          "asset_name": "USDT",
+          "balance": "250.5"
+        }
+      ]
+    }
+  ]
+}
+```
+</ResponseExample>
+
+### Создать операцию выплаты
+
+Метод `POST /gate/pay-out` создаёт операцию выплаты на указанный криптоадрес.
+
+<RequestExample>
+```bash gate/pay-out
+curl --request POST \
+  --url https://sandbox.finmar.tech/gate/pay-out \
+  --header 'Authorization: Basic BASE64_LOGIN_PASSWORD' \
+  --header 'Content-Type: application/json' \
+  --data '{
+    "project_id": "preview",
+    "payment_profile": "sandbox",
+    "client_operation_id": "123007887858",
+    "user": {
+      "user_id": "123"
+    },
+    "crypto_network": "TRX",
+    "crypto_asset": "USDT",
+    "crypto_address": "TABC...XYZ",
+    "crypto_amount": "10.00",
+    "url_callback": "https://merchant.example.com/callback",
+    "url_redirect_success": "https://merchant.example.com/success",
+    "url_redirect_fail": "https://merchant.example.com/fail"
+  }'
+```
+</RequestExample>
+
+<ResponseExample>
+```json Success
+{
+  "success": true,
+  "trace_id": "9e57f9dd838a411891c1ace140d210f3",
+  "result": {
+    "reference_id": "60531ee8-08aa-459c-80c5-a93e633a7c8b"
+  }
+}
+```
+</ResponseExample>
