Documentation edits made through Mintlify web editor

--- a/api-reference/integration/checkout.mdx
+++ b/api-reference/integration/checkout.mdx
@@ -207,7 +207,7 @@ curl --location 'https://sandbox.finmar.tech/prepare2/api/v3/checkout' \
 }'
 ```
 
-#### Параметры ответа
+### Параметры ответа
 
 <ParamField body="success" type="boolean" required>
   Успешное создание операции
