Documentation edits made through Mintlify web editor

--- a/api-reference/integration/cryptogate/get-address.mdx
+++ b/api-reference/integration/cryptogate/get-address.mdx
@@ -41,19 +41,16 @@ sidebarTitle: "2. Адрес пользователя"
   <Step title="Отправьте запрос">
     <RequestExample>
     ```bash gate/get-address
-    curl --request POST \
-      --url https://sandbox.finmar.tech/gate/get-address \
-      --header "Authorization: Basic BASE64_LOGIN_PASSWORD" \
-      --header "Content-Type: application/json" \
-      --data '{
-        "payment_profile": "sandbox",
-        "project_id": "preview",
-        "crypto_network": "TRX",
-        "crypto_asset": "USDT",
-        "user": { "user_id": "123" },
-        "url_callback": "https://merchant.example.com/cryptogate/callback",
-        "description": "Deposit address for TRX/USDT"
-      }'
+curl --location --request POST 'https://finmar.tech/prepare2/api/v3/gate/get-address' \
+--header 'Content-Type: application/json' \
+--header 'Authorization: Basic b3BlcmF0b3JfZGVtbzojdShQcVJAeEQ1N0c=' \
+--data '{
+  "user": {
+    "user_id": "123"
+  },
+  "payment_profile": "production",
+  "crypto_network": "TRX"
+}'
     ```
     </RequestExample>
   </Step>
@@ -61,11 +58,13 @@ sidebarTitle: "2. Адрес пользователя"
   <Step title="Получите адрес">
     <ResponseExample>
     ```json Success
-    {
-      "success": true,
-      "trace_id": "c0f5e1af2d404f4f9b3f4e3aa4e2481e",
-      "result": { "address": "TFQsv4umwyrBwgzM6adZdpTHvpYZrZLUYG" }
-    }
+ {
+    "success": true,
+    "result": {
+        "address": "TPQ65AX8rm4RwiyJUVPEYtYdZUdVZ6jZA1"
+    },
+    "trace_id": "bd8c668590664e8d90318627e5de8055"
+}
     ```
     </ResponseExample>
 
@@ -73,9 +72,9 @@ sidebarTitle: "2. Адрес пользователя"
       Сохраните `trace_id`, `user_id` и `address` — они понадобятся для сопоставления колбеков и исключения двойного зачисления.
     </Check>
   </Step>
+    <Step title="Обработайте обратное уведомление">
+ 
+  </Step>
 </Steps>
 
-<Warning>
-  Передавайте `url_callback` по HTTPS и держите его доступным для публичных POST-запросов.
-</Warning>
-
+ 
